@@ -607,7 +607,8 @@ cdef class Session:
             if index < 0:
                 ftcount = ograpi.OGR_L_GetFeatureCount(self.cogr_layer, 0)
                 if ftcount == -1:
-                    raise IndexError("Layer does not support counting")
+                    raise IndexError(
+                        "collection's dataset does not support negative indexes")
                 index += ftcount
             cogr_feature = ograpi.OGR_L_GetFeature(self.cogr_layer, index)
             if cogr_feature == NULL:
@@ -974,7 +975,8 @@ cdef class Iterator:
         ftcount = ograpi.OGR_L_GetFeatureCount(session.cogr_layer, 0)
         if ftcount == -1 and ((start is not None and start < 0) or
                               (stop is not None and stop < 0)):
-            raise IndexError("Layer does not support counting")
+            raise IndexError(
+                "collection's dataset does not support negative slice indexes")
 
         if stop is not None and stop < 0:
             stop += ftcount
